[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://themes/kenneyUI-yellow.tres" type="Theme" id=2]
[ext_resource path="res://themes/kenneyUI-red.tres" type="Theme" id=3]
[ext_resource path="res://themes/kenneyUI-blue.tres" type="Theme" id=4]
[ext_resource path="res://themes/kenneyUI-green.tres" type="Theme" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 3273.0
margin_bottom = 2330.0
color = Color( 0.443137, 0.854902, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.376
anchor_right = 0.559
anchor_bottom = 1.0
margin_top = -2.59999
margin_right = 56.584
margin_bottom = -10.0
custom_constants/separation = 10

[node name="StatisticsButton" type="Button" parent="VBoxContainer"]
margin_right = 361.0
margin_bottom = 42.251
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Statistics"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 361.0
margin_bottom = 94.251
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "Settings"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 361.0
margin_bottom = 146.251
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "go back"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 361.0
margin_bottom = 198.251
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "quit"

[connection signal="pressed" from="VBoxContainer/StatisticsButton" to="." method="_on_StatisticsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
